load_testing/manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: k6-client
spec:
  selector:
    app: k6-client
  ports:
    - protocol: TCP
      port: 5665
      targetPort: 5665
