load_testing/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k6-client.test.teacherservices.cloud
spec:
  ingressClassName: nginx
  rules:
  - host: k6-client.test.teacherservices.cloud
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: k6-client
            port:
              number: 5665
